--- a/register_login/register_login.html
+++ b/register_login/register_login.html
@@ -7,10 +7,21 @@
     <title>Pizza Nostra</title>
     <link rel="icon" href="../img/pizzaico.ico">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="var.css">
 
 </head>
 
 <body>
+
+    <input type="checkbox" class="toggle-check" id="toggle" hidden>
+    <label class="toggle" for="toggle">Menu</label>
+    <div class="container-menu">
+        <nav class="menu">
+            <a href="#" class="item">Inicio</a>
+            <a href="#" class="item">Menu</a>
+            <a href="#" class="item">Inicio de sesion</a>
+        </nav>
+    </div>
 
     <main>
 
@@ -31,10 +42,10 @@
             <!--Formulario de Login y registro-->
             <div class="contenedor__login-register">
                 <!--Login-->
-                <form action="" class="formulario__login">
+                <form action="../DataBase/login_usuario.php" method="POST" class="formulario__login">
                     <h2>Iniciar Sesión</h2>
-                    <input type="text" placeholder="Correo Electronico">
-                    <input type="password" placeholder="Contraseña">
+                    <input type="text" placeholder="Correo Electronico" name="correo">
+                    <input type="password" placeholder="Contraseña" name="contrasena">
                     <button>Entrar</button>
                 </form>
 
@@ -45,6 +56,8 @@
                     <input type="text" placeholder="Correo Electronico" name="correo">
                     <input type="text" placeholder="Usuario" name="usuario">
                     <input type="password" placeholder="Contraseña" name="contrasena">
+                    <input type="text" placeholder="Celular" name="celular">
+                    <input type="text" placeholder="Direccion" name="direccion">
                     <button>Regístrarse</button>
                 </form>
             </div>
