--- a/login admin/Llogin_admin.html
+++ b/login admin/Llogin_admin.html
@@ -34,39 +34,28 @@
                     <button id="btn__iniciar-sesion">Iniciar Sesión</button>
                 </div>
                 <div class="caja__trasera-register">
-                    <h3>¿Aún no tienes una cuenta?</h3>
-                    <p>Regístrate para que puedas iniciar sesión</p>
-                    <button id="btn__registrarse">Regístrarse</button>
+                    <h3>Inicio Sesión Administrador</h3>
+                    <p>Solo Administradores</p>
+                    
                 </div>
             </div>
 
             <!--Formulario de Login y registro-->
             <div class="contenedor__login-register">
                 <!--Login-->
-                <form action="../DataBase/login_usuario.php" method="POST" class="formulario__login">
+                <form action="../DataBase/admin/login_admin.php" method="POST" class="formulario__login">
                     <h2>Iniciar Sesión</h2>
                     <input type="text" placeholder="Correo Electronico" name="correo">
                     <input type="password" placeholder="Contraseña" name="contrasena">
                     <button>Entrar</button>
                 </form>
 
-                <!--Register-->
-                <form action="../DataBase/register_usuario.php" method="POST" class="formulario__register">
-                    <h2>Regístrarse</h2>
-                    <input type="text" placeholder="Nombre completo" name="nombre_completo">
-                    <input type="text" placeholder="Correo Electronico" name="correo">
-                    <input type="text" placeholder="Usuario" name="usuario">
-                    <input type="password" placeholder="Contraseña" name="contrasena">
-                    <input type="text" placeholder="Celular" name="celular">
-                    <input type="text" placeholder="Direccion" name="direccion">
-                    <button>Regístrarse</button>
-                </form>
             </div>
         </div>
 
     </main>
 
-    <script src="script.js"></script>
+    
 
 </body>
 
