--- a/login admin/Llogin_admin.html
+++ b/login admin/Llogin_admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,9 +18,7 @@
     <label class="toggle" for="toggle">Menu</label>
     <div class="container-menu">
         <nav class="menu">
-            <a href="#" class="item">Inicio</a>
-            <a href="#" class="item">Menu</a>
-            <a href="#" class="item">Inicio de sesion</a>
+            <a href="../register_login/register_login.html" class="item">Inicio de sesion</a>
             <a href="" class="item">Inicio admin</a>
         </nav>
     </div>
@@ -36,7 +35,7 @@
                 <div class="caja__trasera-register">
                     <h3>Inicio Sesión Administrador</h3>
                     <p>Solo Administradores</p>
-                    
+
                 </div>
             </div>
 
@@ -55,10 +54,11 @@
 
     </main>
 
-    
+
 
 </body>
 
 </html>
 </body>
+
 </html>
