--- a/tar/index.html
+++ b/tar/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <!-- Formulario -->
-        <form action="" id="formulario-tarjeta" class="formulario-tarjeta">
+        <form action="../DataBase/pagar/pagar.php"  id="formulario-tarjeta" class="formulario-tarjeta">
             <div class="grupo">
                 <label for="inputNumero">Número Tarjeta</label>
                 <input type="text" id="inputNumero" maxlength="19" autocomplete="off">
